--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,8 @@
 PORT = 8000
-MONGO_URI =mongodb+srv://afraz:6VBKtbW2wNTF1DRa@cluster0.vjsyqdk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI =mongodb+srv://muzi:muzi123@cluster0.quilybs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 MONGO_URI1=mongodb://127.0.0.1:27017/imageAi
 SECRET_KEY=09aofhdushfkjwhdfih
 CLOU_NAME=dskn7duay
 API_KEY=586492171578996
 API_SECRET=kNClI4X88o3YPzMn2lv-eKOeLjk
-ACCESS_TOKEN =d9f6e99d-001e-42fe-b6bb-7f3a4cb9d517
+ACCESS_TOKEN =783eded0-dc40-470a-9f67-2e52324f5192
