added payment page

--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,7 @@ CLOU_NAME=dskn7duay
 API_KEY=586492171578996
 API_SECRET=kNClI4X88o3YPzMn2lv-eKOeLjk
 ACCESS_TOKEN =fde3e280-847c-42cd-ac5f-7d929636ae81
+# razorpay
+
+ SECRET =razorpaysecretkey
+ kEY=razorpaykey
