--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.3",
     "io": "^1.5.0",
     "mongoose": "^8.2.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "razorpay": "^2.9.2"
   }
 }
