--- a/server/.env
+++ b/server/.env
@@ -8,5 +8,5 @@ API_SECRET=kNClI4X88o3YPzMn2lv-eKOeLjk
 ACCESS_TOKEN =fde3e280-847c-42cd-ac5f-7d929636ae81
 # razorpay
 
- SECRET =razorpaysecretkey
- kEY=razorpaykey
+ SECRET =CsG73eYyM0Mtb0CNOBFBgBba
+ kEY=rzp_test_jIapJe66rP65nW
